--- a/MNMSolutions.Web.Presentation/Views/Home/Index.cshtml
+++ b/MNMSolutions.Web.Presentation/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Home Page";
 }
-<body data-ng-controller="AngularJs_studentsController">
+<body data-ng-controller="AngularJs_SalesController">
     <img src="~/Images/blank.gif" alt="" width="1" height="10" />
     <table width="99%" style=" border-bottom:3px solid #3273d5;">
         <tr>
@@ -100,131 +100,194 @@
                 </table>
             </td>
         </tr>
-        <tr ng-show="addEditStudents">
+    <tr ng-show="addEditStudents">
+        <td>
+
+            <table style=" background-color:#FFFFFF; border: dashed 3px #6D7B8D; padding: 5px;width: 99%;table-layout:fixed;" cellpadding="2" cellspacing="2">
+                <tr style="height: 30px; background-color:#336699 ; color:#FFFFFF ;border: solid 1px #659EC7;">
+                    <td>
+                        <h3> Add/Edit Student Details</h3>
+                    </td>
+
+                </tr>
+                <tr>
+                    <td>
+                        <table>
+                            <tr>
+
+                                <td width="20"></td>
+                                <td valign="top">
+                                    <form novalidate name="f1" ng-submit="saveDetails()">
+                                        <table style="color:#9F000F;font-size:large" cellpadding="4" cellspacing="6">
+
+                                            <tr>
+                                                <td>
+                                                    <b>Sales Order Number : </b>
+                                                </td>
+
+                                                <td>
+                                                    <input type="text" name="txtStdIDs" ng-model="soSalesOrderNumber" value="0" style="background-color:tan" readonly />
+                                                    <br />
+
+                                                </td>
+
+
+                                                <td>
+                                                    <b> Sub Total : </b>
+                                                </td>
+
+                                                <td>
+
+                                                    <input type="text" name="txtstdNames" ng-model="soSubTotal" placeholder=" Sub Total..." required />
+                                                    <br />
+                                                    @*<span class="error" ng-show="(f1.file.$dirty || IsFormSubmitted) && f1.txtstdNames.$error.required">Student Name required!</span>*@
+
+                                                </td>
+                                                    
+                                                <td>
+                                                    <b> Comment : </b>
+                                                </td>
+
+                                                <td>
+
+                                                    <input type="text" name="txtstdNames" ng-model="soComment" placeholder=" Comment..." required />
+                                                    <br />
+                                                    @*<span class="error" ng-show="(f1.file.$dirty || IsFormSubmitted) && f1.txtstdNames.$error.required">Student Name required!</span>*@
+
+                                                </td>
+                                            </tr>
+
+
+                                            <tr>
+                                                <td>
+                                                    <b>Tax Amount : </b>
+                                                </td>
+
+                                                <td>
+                                                    <input type="text" name="txtstdEmails" ng-model="soTaxAmt" placeholder=" Tax Amount..." required />
+                                                    <br />
+                                                    @*<span class="error" ng-show="(f1.file.$dirty || IsFormSubmitted) && f1.txtstdEmails.$error.required">Email required!</span>*@
+
+                                                </td>
+
+
+                                                <td>
+                                                    <b> Freight : </b>
+                                                </td>
+
+                                                <td>
+
+                                                    <input type="text" name="txtPhones" ng-model="soFreight" placeholder=" Phone ..." required />
+                                                    <br />
+                                                    @*<span class="error" ng-show="(f1.file.$dirty || IsFormSubmitted) && f1.txtPhones.$error.required">Phone required!</span>*@
+
+                                                </td>
+                                            </tr>
+
+                                            <tr>
+                                                <td>
+                                                    <b>Total Due : </b>
+                                                </td>
+
+                                                <td>
+                                                    <input type="text" name="txtAddresss" ng-model="soTotalDue" placeholder=" Address ..." required />
+                                                    <br />
+                                                    @*<span class="error" ng-show="(f1.file.$dirty || IsFormSubmitted) && f1.txtAddresss.$error.required">Address required!</span>*@
+
+                                                </td>
+
+
+                                                <td colspan="2">
+
+
+                                                    <input type="submit" value="Save Item" style="background-color:#336699;color:#FFFFFF" required />
+
+                                                </td>
+                                            </tr>
+
+
+
+                                        </table>
+
+                                    </form>
+                                </td>
+
+                            </tr>
+
+                        </table>
+                    </td>
+                </tr>
+
+            </table>
+
+            <img src="~/Images/blank.gif" alt="" width="1" height="4" />
+
+
+        </td>
+    </tr>
+    @* Product List *@
+        <tr ng-show="ProductsList">
+
             <td>
 
-                <table style=" background-color:#FFFFFF; border: dashed 3px #6D7B8D; padding: 5px;width: 99%;table-layout:fixed;" cellpadding="2" cellspacing="2">
+                <table style=" background-color:#FFFFFF; border: solid 2px #6D7B8D; padding: 5px;width: 99%;table-layout:fixed;" cellpadding="2" cellspacing="2">
+
                     <tr style="height: 30px; background-color:#336699 ; color:#FFFFFF ;border: solid 1px #659EC7;">
-                        <td>
-                            <h3> Add/Edit Student Details</h3>
-                        </td>
+                        <td width="40" text-align="center">Edit</td>
+                        <td width="40">Delete</td>
+                        <td width="200">Product Name</td>
+                        <td width="120">Category</td>
+                        <td width="80">Quantity Per Unit</td>
+                        <td width="80">Unit Price</td>
+                        <td width="80">Unit In Stock</td>
 
                     </tr>
-                    <tr>
-                        <td>
-                            <table>
-                                <tr>
+                    <tbody data-ng-repeat="products in Product.data">
+                        <tr>
 
-                                    <td width="20"></td>
-                                    <td valign="top">
-                                        <form novalidate name="f1" ng-submit="saveDetails()">
-                                            <table style="color:#9F000F;font-size:large" cellpadding="4" cellspacing="6">
-
-                                                <tr>
-                                                    <td>
-                                                        <b>Sales Order Number : </b>
-                                                    </td>
-
-                                                    <td>
-                                                        <input type="text" name="txtStdIDs" ng-model="soSalesOrderNumber" value="0" style="background-color:tan" readonly />
-                                                        <br />
-
-                                                    </td>
-
-
-                                                    <td>
-                                                        <b> Sub Total : </b>
-                                                    </td>
-
-                                                    <td>
-
-                                                        <input type="text" name="txtstdNames" ng-model="soSubTotal" placeholder=" Sub Total..." required />
-                                                        <br />
-                                                        @*<span class="error" ng-show="(f1.file.$dirty || IsFormSubmitted) && f1.txtstdNames.$error.required">Student Name required!</span>*@
-
-                                                    </td>
-                                                    
-                                                    <td>
-                                                        <b> Comment : </b>
-                                                    </td>
-
-                                                    <td>
-
-                                                        <input type="text" name="txtstdNames" ng-model="soComment" placeholder=" Comment..." required />
-                                                        <br />
-                                                        @*<span class="error" ng-show="(f1.file.$dirty || IsFormSubmitted) && f1.txtstdNames.$error.required">Student Name required!</span>*@
-
-                                                    </td>
-                                                </tr>
-
-
-                                                <tr>
-                                                    <td>
-                                                        <b>Tax Amount : </b>
-                                                    </td>
-
-                                                    <td>
-                                                        <input type="text" name="txtstdEmails" ng-model="soTaxAmt" placeholder=" Tax Amount..." required />
-                                                        <br />
-                                                        @*<span class="error" ng-show="(f1.file.$dirty || IsFormSubmitted) && f1.txtstdEmails.$error.required">Email required!</span>*@
-
-                                                    </td>
-
-
-                                                    <td>
-                                                        <b> Freight : </b>
-                                                    </td>
-
-                                                    <td>
-
-                                                        <input type="text" name="txtPhones" ng-model="soFreight" placeholder=" Phone ..." required />
-                                                        <br />
-                                                        @*<span class="error" ng-show="(f1.file.$dirty || IsFormSubmitted) && f1.txtPhones.$error.required">Phone required!</span>*@
-
-                                                    </td>
-                                                </tr>
-
-                                                <tr>
-                                                    <td>
-                                                        <b>Total Due : </b>
-                                                    </td>
-
-                                                    <td>
-                                                        <input type="text" name="txtAddresss" ng-model="soTotalDue" placeholder=" Address ..." required />
-                                                        <br />
-                                                        @*<span class="error" ng-show="(f1.file.$dirty || IsFormSubmitted) && f1.txtAddresss.$error.required">Address required!</span>*@
-
-                                                    </td>
-
-
-                                                    <td colspan="2">
-
-
-                                                        <input type="submit" value="Save Item" style="background-color:#336699;color:#FFFFFF" required />
-
-                                                    </td>
-                                                </tr>
-
-
-
-                                            </table>
-
-                                        </form>
-                                    </td>
-
-                                </tr>
-
-                            </table>
+                            <td style="border: solid 1px #659EC7; padding: 5px;table-layout:fixed;">
+                                <span style="color:#9F000F">
+                                    @*// id, sub, tax, freight, comment*@
+                                    @*ng-click="soEdit(orders.SalesOrderID, orders.SalesOrderNumber, orders.SubTotal, orders.TaxAmt, orders.Freight, orders.Comment)"*@
+                                <img src="~/Images/edit.gif" alt="Edit">
+                            </span>
                         </td>
-                    </tr>
 
-                </table>
+                        <td style="border: solid 1px #659EC7; padding: 5px;table-layout:fixed;">
+                            <span style="color: #9F000F">
+                                @*ng-click="soDelete(orders.SalesOrderID, orders.SalesOrderNumber)"*@
+                                <img src="~/Images/delete.gif" alt="Delete">
+                            </span>
+                        </td>
 
-                <img src="~/Images/blank.gif" alt="" width="1" height="4" />
+                        <td style="border: solid 1px #659EC7; padding: 5px;table-layout:fixed;">
+                            <span style="color:#9F000F">{{ products.ProductName }}</span>
+                        </td>
 
+                        <td style="border: solid 1px #659EC7; padding: 5px;table-layout:fixed;">
+                            <span style="color:#9F000F">{{ products.Category }}</span>
+                        </td>
 
-            </td>
-        </tr>
+                            <td style="border: solid 1px #659EC7; padding: 5px;table-layout:fixed;">
+                                <span style="color:#9F000F">{{ products.QuantityPerUnit }}</span>
+                            </td>
+
+                            <td style="border: solid 1px #659EC7; padding: 5px;table-layout:fixed;">
+                                <span style="color:#9F000F">{{ products.UnitsInStock }}</span>
+                            </td>
+                            
+                            <td style="border: solid 1px #659EC7; padding: 5px;table-layout:fixed;">
+                                <span style="color:#9F000F">{{ products.UnitsInStock }}</span>
+                            </td>
+
+                        </tr>
+                </tbody>
+            </table>
+
+        </td>
+    </tr>
+
+    @* Sales Order List *@
         <tr ng-show="StudentsList">
 
             <td>
