initial angularjs restructuring success

--- a/MNMSolutions.Web.Presentation/Views/Home/Index.cshtml
+++ b/MNMSolutions.Web.Presentation/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Home Page";
 }
-<body data-ng-controller="AngularJs_SalesController">
+<body data-ng-controller="SalesController">
     <img src="~/Images/blank.gif" alt="" width="1" height="10" />
     <table width="99%" style=" border-bottom:3px solid #3273d5;">
         <tr>
@@ -346,4 +346,7 @@
 <script src="~/Scripts/angular.min.js"></script>
 <script src="~/Scripts/angular-animate.min.js"></script>
 <script src="~/Scripts/SPA/app.js"></script>
+<script src="~/Scripts/SPA/Controllers/SalesController.js"></script>
+<script src="~/Scripts/SPA/controllers.js"></script>
+
 
