--- a/MNMSolutions.Web.Presentation/Views/Home/Index.cshtml
+++ b/MNMSolutions.Web.Presentation/Views/Home/Index.cshtml
@@ -226,7 +226,7 @@
         </td>
     </tr>
     @* Product List *@
-        <tr ng-show="ProductsList">
+        <tr data-ng-controller="ProductsController" ng-show="ProductsList">
 
             <td>
 
@@ -347,6 +347,7 @@
 <script src="~/Scripts/angular-animate.min.js"></script>
 <script src="~/Scripts/SPA/app.js"></script>
 <script src="~/Scripts/SPA/Controllers/SalesController.js"></script>
+<script src="~/Scripts/SPA/Controllers/ProductsController.js"></script>
 <script src="~/Scripts/SPA/controllers.js"></script>
 
 
