--- a/MNMSolutions.Web.Presentation/Views/Home/Index.cshtml
+++ b/MNMSolutions.Web.Presentation/Views/Home/Index.cshtml
@@ -11,9 +11,10 @@
             <td width=" 250">
                 <table width="99%">
                     <tr>
-                        <td>
+                        <display-name></display-name>
+                        @*<td>
                             Welcome Mr. {{'MyName'}}
-                        </td>
+                        </td>*@
                     </tr>
                 </table>
             </td>
@@ -349,5 +350,6 @@
 <script src="~/Scripts/SPA/Controllers/SalesController.js"></script>
 <script src="~/Scripts/SPA/Controllers/ProductsController.js"></script>
 <script src="~/Scripts/SPA/controllers.js"></script>
+<script src="~/Scripts/SPA/salesOrdering/components/displayname.js"></script>
 
 
